syntax = "proto3";

package fijoy.v1;

import "buf/validate/validate.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Workspace {
  string id = 1 [(buf.validate.field).string.min_len = 1];
  string namespace = 2 [(buf.validate.field).string.min_len = 1];
  string name = 3 [(buf.validate.field).string.min_len = 1];
  google.protobuf.Timestamp created_at = 4 [(buf.validate.field).required = true];
  string primary_currency = 5 [(buf.validate.field).string.min_len = 1];
  repeated string supported_currencies = 6 [(buf.validate.field).repeated.unique = true];
  string locale = 7 [(buf.validate.field).string.min_len = 1];
}

message Workspaces {
  repeated Workspace workspaces = 1 [(buf.validate.field).required = true];
}

message CreateWorkspaceRequest {
  string namespace = 1 [(buf.validate.field).string.min_len = 1];
  string name = 2 [(buf.validate.field).string.min_len = 1];
  string primary_currency = 3 [(buf.validate.field).string.min_len = 1];
  repeated string supported_currencies = 4 [(buf.validate.field).repeated.unique = true];
  string locale = 5 [(buf.validate.field).string.min_len = 1];
}

message GetWorkspaceByIdRequest {
  string id = 1 [(buf.validate.field).string.min_len = 1];
}

message GetWorkspaceByNamespaceRequest {
  string namespace = 1 [(buf.validate.field).string.min_len = 1];
}

message UpdateWorkspaceNameRequest {
  string name = 1 [(buf.validate.field).string.min_len = 1];
}

message UpdateWorkspaceNamespaceRequest {
  string namespace = 1 [(buf.validate.field).string.min_len = 1];
}

message UpdateCurrencyRequest {
  string primaryCurrency = 1 [(buf.validate.field).string.min_len = 1];
  repeated string supportedCurrencies = 2 [(buf.validate.field).repeated.unique = true];
}

message UpdateLocaleRequest {
  string locale = 1 [(buf.validate.field).string.min_len = 1];
}

service WorkspaceService {
  rpc CreateWorkspace(CreateWorkspaceRequest) returns (Workspace);
  rpc GetWorkspaces(google.protobuf.Empty) returns (Workspaces) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc GetWorkspaceById(GetWorkspaceByIdRequest) returns (Workspace) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc GetWorkspaceByNamespace(GetWorkspaceByNamespaceRequest) returns (Workspace) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  rpc UpdateWorkspaceName(UpdateWorkspaceNameRequest) returns (Workspace);
  rpc UpdateWorkspaceNamespace(UpdateWorkspaceNamespaceRequest) returns (Workspace);
  rpc UpdateCurrency(UpdateCurrencyRequest) returns (Workspace);
  rpc UpdateLocale(UpdateLocaleRequest) returns (Workspace);

  rpc DeleteWorkspace(google.protobuf.Empty) returns (Workspace) {}
}
